--- a/package.json
+++ b/package.json
@@ -1,33 +1,29 @@
 {
-  "name": "Reserved",
-  "description": "Reserved Homepage",
-  "version": "2.0.2",
-  "homepage": "",
-  "author": "William Kasel <wkasel@gmail.com> | @wkasel",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/goreserved/site.git"
-  },
-  "bugs": {
-    "url": "https://github.com/goreserved/site/issues"
-  },
-  "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-nodeunit": "~0.1.0",
-    "grunt-contrib": ">=0.3.0",
-    "grunt-recess": "git://github.com/Wkasel/grunt-contrib-recess.git",
-    "uglify-js": ">=1.3.4",
-    "grunt-contrib-concat": "~0.1.1",
-    "grunt-contrib-qunit": "~0.1.0",
-    "grunt-contrib-jshint": "~0.1.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-less": "~0.7.0",
-    "grunt-contrib-uglify": "~0.2.4",
-    "grunt-contrib-clean": "~0.4.0a",
-    "grunt-contrib-jade": "~0.8.0",
-    "grunt-contrib-coffee": "~0.7.0",
-    "grunt-contrib-handlebars": "~0.5.10",
-    "grunt-contrib-cssmin": "~0.6.1"
-  },
-  "engine": "node 0.8"
+    "name": "Reserved",
+    "description": "Reserved Homepage",
+    "version": "2.0.2",
+    "homepage": "",
+    "author": "William Kasel <wkasel@gmail.com> | @wkasel",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/goreserved/site.git"
+    },
+    "bugs": {
+        "url": "https://github.com/goreserved/site/issues"
+    },
+    "devDependencies": {
+        "grunt": "~0.4.1",
+        "grunt-contrib": "~0.8.0",
+        "grunt-contrib-concat": "~0.3.0",
+        "grunt-contrib-jshint": "~0.7.0",
+        "grunt-contrib-watch": "~0.5.3",
+        "grunt-contrib-less": "~0.8.1",
+        "grunt-contrib-uglify": "~0.2.5",
+        "grunt-contrib-clean": "~0.5.0",
+        "grunt-contrib-jade": "~0.8.0",
+        "grunt-contrib-coffee": "~0.7.0",
+        "grunt-contrib-handlebars": "~0.5.11",
+        "grunt-contrib-cssmin": "~0.6.2"
+    },
+    "engine": "node 0.8"
 }
