--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-    "name": "Boilerplate",
-    "description": "Boilerplate",
-    "version": "1.0.0",
-    "homepage": "",
-    "author": "William Kasel <wkasel@gmail.com> | @wkasel",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/wkasel/Static-Boilerplate.git"
-    },
-    "bugs": {
-        "url": "https://github.com/wkasel/Static-Boilerplate"
-    },
-    "devDependencies": {
-        "grunt": "~0.4.1",
-        "grunt-contrib": "~0.8.0",
-        "grunt-contrib-concat": "~0.3.0",
-        "grunt-contrib-jshint": "~0.6.4",
-        "grunt-contrib-watch": "~0.5.3",
-        "grunt-contrib-less": "~0.7.0",
-        "grunt-contrib-uglify": "~0.2.5",
-        "grunt-contrib-clean": "~0.5.0",
-        "grunt-contrib-jade": "~0.8.0",
-        "grunt-contrib-coffee": "~0.7.0",
-        "grunt-contrib-handlebars": "~0.5.11",
-        "grunt-contrib-cssmin": "~0.6.2"
-    },
-    "engine": "node 0.8"
+  "name": "Boilerplate",
+  "description": "Boilerplate",
+  "version": "1.0.0",
+  "homepage": "",
+  "author": "William Kasel <wkasel@gmail.com> | @wkasel",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wkasel/Static-Boilerplate.git"
+  },
+  "bugs": {
+    "url": "https://github.com/wkasel/Static-Boilerplate"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.4",
+    "grunt-contrib": "~0.8.0",
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-copy": "^0.4.1",
+    "grunt-contrib-cssmin": "~0.6.2",
+    "grunt-contrib-handlebars": "~0.5.11",
+    "grunt-contrib-jade": "~0.8.0",
+    "grunt-contrib-jshint": "~0.6.4",
+    "grunt-contrib-less": "~0.7.0",
+    "grunt-contrib-uglify": "~0.2.5",
+    "grunt-contrib-watch": "~0.5.3"
+  },
+  "engine": "node 0.8"
 }
